--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}404 - Niet gevonden{% endblock %}
+{% block title %}{{ _('404 - Niet gevonden') }}{% endblock %}
 
 {% block content %}
 <div class="container text-center mt-5">
-  <h1 class="display-4">404 - Pagina niet gevonden</h1>
-  <p class="lead">Sorry, de pagina die je zoekt bestaat niet.</p>
-  <a href="{{ url_for('routes.login') }}" class="btn btn-primary mt-3">Terug naar login</a>
+  <h1 class="display-4">{{ _('404 - Pagina niet gevonden') }}</h1>
+  <p class="lead">{{ _('Sorry, de pagina die je zoekt bestaat niet.') }}</p>
+  <a href="{{ url_for('routes.login') }}" class="btn btn-primary mt-3">{{ _('Terug naar login') }}</a>
 </div>
 {% endblock %}
