--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -4,7 +4,7 @@
   background-color: white;
   border-radius: 20px;
   margin: 20px;
-  background-size: 53rem;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: right;
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
